--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -30,9 +30,9 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 Q2.1 is located in a small valley with a narrow flood-plain cutting through the foothills lining the eastern flank of the Cachi valley, below Huanta. The river Huanta is known as the river Perascucho at this point.
 
-The study site is situated about 200 metres above the confluence of the river Huanta with the river Cachi. Access for taking measurements is best from the right bank when the river level is low. When the river is high it may not be possible to cross the river. A rise and fall in the river level may also impact upon the precise location of the site.
+The study site is situated about 100 metres above the confluence of the river Huanta with the river Cachi. Access for taking measurements is best from the right bank when the river level is low. When the river is high it may not be possible to cross the river. A rise and fall in the river level may also impact upon the precise location of the site.
 
-Access is along the right bank of the river down a rough track through and beyond the Hacienda San Jose de Toyas. The road ends about 1km beyond the hacienda amongst scrubby vegetation at the river Cachi.
+Access is along the right bank of the river down a rough track through and beyond the Hacienda San Jose de Toyas. The road ends about 1km beyond the hacienda amongst scrubby vegetation at the river Cachi though in June 2023 much of the vegetation on the right bank had just been cleared.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
@@ -40,9 +40,9 @@ Access is along the right bank of the river down a rough track through and beyon
 
 Q2.1 se encuentra en un pequeño valle con una estrecha llanura de inundación que corta a través de las estribaciones que bordean el flanco oriental del valle de Cachi, por debajo de Huanta. El río Huanta es conocido como el río Perascucho en este punto.
 
-El sitio de estudio está situado a unos 200 metros por encima de la confluencia del río Huanta con el río Cachi. El acceso para realizar las mediciones es mejor desde la margen derecha cuando el nivel del río es bajo. Cuando el río está alto, puede que no sea posible cruzar el río. La subida y bajada del nivel del río también puede afectar la ubicación precisa del sitio.
+El sitio de estudio está situado a unos 100 metros por encima de la confluencia del río Huanta con el río Cachi. El acceso para realizar las mediciones es mejor desde la margen derecha cuando el nivel del río es bajo. Cuando el río está alto, puede que no sea posible cruzar el río. La subida y bajada del nivel del río también puede afectar la ubicación precisa del sitio.
 
-El acceso se realiza a lo largo de la orilla derecha del río por un camino accidentado a través y más allá de la Hacienda San José de Toyas. El camino termina aproximadamente 1 km después de la hacienda, entre la vegetación de matorrales por las orillas del río Cachi.
+El acceso se realiza a lo largo de la orilla derecha del río por un camino accidentado a través y más allá de la Hacienda San José de Toyas. El camino termina aproximadamente 1 km después de la hacienda, entre la vegetación de matorrales por las orillas del río Cachi aunque en junio de 2023 se acababa de desbrozar gran parte de la vegetación de la margen derecha.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
 
