--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -94,7 +94,7 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q2.2                                 |       March / marzo 2023                                 |       June / junio 2023            |
+|       Site / Sitio: Q2.2                                 |     Q2.2  March / marzo 2023                             |     Q2.2A  June / junio 2023       |
 |----------------------------------------------------------|----------------------------------------------------------|------------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno      |
 |     Date / Fecha:                                        |     18.3.23                                              |     21.6.23                        |
