--- a/_docs/site-network/Q2_2.md
+++ b/_docs/site-network/Q2_2.md
@@ -22,7 +22,7 @@ Elevation:  2705m asl.
 Aerial view of the June 2023 study site / Vista aérea del lugar del estudio en junio 2023 (June 2023) (John Forrest)
 
 
-### Visita en March 2023 / Visita en marzo 2023
+### Q2.2 - Visita en March 2023 / Visita en marzo 2023
 
 ![Q2.2site](/assets/sites/Q2.2site.jpg)
 The study site / El lugar del estudio (March 2023) (John Forrest)
@@ -34,7 +34,7 @@ View downstream from the study site (with rubbish) / Visita rio abajo del lugar 
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
 
 
-### Visit en June 2023 / Visita en junio 2023
+### Q2.2A - Visit en June 2023 / Visita en junio 2023
 
 ![Q2.2site](/assets/sites/Q2.2Asite.JPG)
 The study site / El lugar del estudio (June 2023) (John Forrest)
