--- a/_docs/site-network/Q2_3.md
+++ b/_docs/site-network/Q2_3.md
@@ -15,7 +15,7 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 
 
 ![Q2.3site](/assets/sites/Q2.3site.jpg)
-The study site / El lugar del estudio (March 2023) (John Forrest)
+The study site (looking north) / El lugar del estudio (Vista al norte) (March 2023) (John Forrest)
 
 
 ![Q2.3downstream](/assets/sites/Q2.3downstream.jpg)
