--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -18,6 +18,17 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 The study site / El lugar del estudio (March 2023) (John Forrest)
 
 
+![Q2.4site](/assets/sites/Q2.4site.jpg)
+The study site / El lugar del estudio (March 2023) (John Forrest)
+
+![Q2.4downstream](/assets/sites/Q2.4downstream.jpg)
+View downstream from the study site / Visita rio abajo del lugar del estudio (March 2023) (John Forrest)
+
+![Q2.4upstream](/assets/sites/Q2.4upstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (March 2023) (John Forrest)
+
+
+
 ### Site description
 
 Q2.4 is located high in the sierra Razuhuillca where two fairly wide, steep sided valleys meet.
