--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -15,6 +15,10 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 
 
 ![Q2.4site](/assets/sites/Q2.4site.JPG)
+The study site / El lugar del estudio (March 2023) (John Forrest)
+
+
+![Q2.4site](/assets/sites/Q2.4site2.JPG)
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
 ![Q2.4downstream](/assets/sites/Q2.4downstream.JPG)
