--- a/_docs/site-network/Q2_4.md
+++ b/_docs/site-network/Q2_4.md
@@ -18,7 +18,7 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 The study site / El lugar del estudio (June 2023) (John Forrest)
 
 ![Q2.4downstream](/assets/sites/Q2.4downstream.JPG)
-View downstream from the study site / Visita rio abajo del lugar del estudio (June 2023) (John Forrest)
+View downstream towards the study site / Visita rio abajo hacia el lugar del estudio (June 2023) (John Forrest)
 
 ![Q2.4upstream](/assets/sites/Q2.4upstream.JPG)
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (June 2023) (John Forrest)
