--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -60,28 +60,27 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: RC01                                 |       March / marzo 2023                   |       June / junio 2023          |
-|----------------------------------------------------------|--------------------------------------------|----------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                |     Austral Winter / Invierno    |
-|     Date / Fecha:                                        |     14.3.23                                |     17.6.23                      |
-|     Time / Hora:                                         |     8.15                                   |     8.30                         |
-|     Width / Ancho (m)                                    |     42.70                                  |     34.75                        |
-|     Depth / Profundidad (Av.) (m)                        |     1.10                                   |     0.35                         |
-|     CSA / Area traversal (Av.) (m²)                      |     46.97                                  |     12.16                        |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.75                                   |     0.380                        |
-|     Discharge / Caudal (Av.) (m³/s)                      |     35.228                                 |     4.622                        |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas            |     Mainly sand / Mas arena      |
-|     Temperature (Atmospheric) (°C)                       |     18.0                                   |     18.0                         |
-|     Temperature (Water / Agua) (°C)                      |     15.52                                  |     14.62                        |
-|     Atmospheric pressure / presión (mbar)                |     820.6                                  |     813.2                        |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                            |     11.89                        |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |                                            |     137.6                        |
-|     pH                                                   |     8.33                                   |     8.57                         |
-|     Conductivity / Conductividad (µS/cm)                 |     250                                    |     639                          |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     125                                    |     320                          |
-|     ORP (mV)                                             |     233.8                                  |     85.8                         |
-|     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero    |     Clear / Transparente         |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     91 (1.6N)                              |     183 (1.6N)                   |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     74                                     |     154                          |
-
+|     Site / Sitio: RC01                                   |     March / marzo 2023                     |     June / junio 2023            |     November / noviembre 2023      |
+|----------------------------------------------------------|--------------------------------------------|----------------------------------|------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                |     Austral Winter / Invierno    |     Austral Winter / Invierno      |
+|     Date / Fecha:                                        |     14.3.23                                |     17.6.23                      |     18.11.23                       |
+|     Time / Hora:                                         |     8.15                                   |     8.30                         |     8.30                           |
+|     Width / Ancho (m)                                    |     42.70                                  |     34.75                        |     49.00                          |
+|     Depth / Profundidad (Av.) (m)                        |     1.10                                   |     0.35                         |     0.42                           |
+|     CSA / Area traversal (Av.) (m²)                      |     46.97                                  |     12.16                        |     20.776                         |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     0.75                                   |     0.38                         |     0.63                           |
+|     Discharge / Caudal (Av.) (m³/s)                      |     35.228                                 |     4.622                        |     13.089                         |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas            |     Mainly sand / Mas arena      |     Mainly boulders / Mas rocas    |
+|     Temperature (Atmospheric) (°C)                       |     18.0                                   |     18.0                         |     28.0                           |
+|     Temperature (Water / Agua) (°C)                      |     15.52                                  |     14.62                        |     19.66                          |
+|     Atmospheric pressure / presión (mbar)                |     820.6                                  |     813.2                        |     822.3                          |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                            |     11.89                        |     6.01                           |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                            |     137.6                        |     76.78                          |
+|     pH                                                   |     8.33                                   |     8.57                         |     8.28                           |
+|     Conductivity / Conductividad (µS/cm)                 |     250                                    |     639                          |     601                            |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     125                                    |     320                          |     300                            |
+|     ORP (mV)                                             |     233.8                                  |     85.8                         |     34.53                          |
+|     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero    |     Clear / Transparente         |     Chocolate / Chocolate          |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     91 (1.6N)                              |     183 (1.6N)                   |     159 (1.6N)                     |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     74                                     |     154                          |     135                            |
 
