--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -4,7 +4,7 @@ permalink: /docs/RC01/
 ---
 
 
-### Site: RC01 - Lower Cachi - Puente Allccoomachay
+### Site: RC01 - Lower Cachi - Puente Allccomachay
 
 GPS: S12°843874, W74°328924. 
 Elevation: 2158m asl.
