--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -28,11 +28,11 @@ Site RC01 - View downstream.  (March 2023) (John Forrest)
 
 ### Site description
 
-RC01 is located in the final section of the river Cachi just above its confluence with the river Mantaro. The valley is wider at this point and the flood-plain is up to 150 metres across. The study site is situated on the left bank of the rio Cachi about 200 metres downstream from the Allcomachay bridge. The precise position is opposite a large rock outcrop on the steep right bank and just below the confluence with a small stream entering the rio Cachi on the right bank because there is normally a single channel at this point, whereas above the bridge the channel is braided.
+RC01 is located in the final section of the river Cachi just above its confluence with the river Mantaro. The valley is wider at this point and the flood-plain is up to 150 metres across. The study site is situated on the left bank of the rio Cachi about 200 metres downstream from the Allccomachay bridge. The precise position is opposite a large rock outcrop on the steep right bank and just below the confluence with a small stream entering the rio Cachi on the right bank because there is normally a single channel at this point, whereas above the bridge the channel is braided.
 
 The study site is located on extensive river deposits so its precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
 
-It may be possible to drive down on to the river deposits to access the site. If this is not possible, then park in front of the housing at the bridge entrance and walk down.
+It may be possible to drive down on to the river deposits to access the site. If this is not possible, then park in front of the housing at the bridge entrance on the left bank and walk down.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
@@ -43,7 +43,7 @@ RC01 se encuentra en el tramo final del río Cachi, justo rio arriba de su confl
 
 El sitio de muestreo está situado sobre extensos depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
 
-Puede que sea posible bajar con el auto hasta los depósitos fluviales para acceder el sitio. Si no es posible, se puede aparcar delante de las viviendas en la entrada del puente y bajar andando.
+Puede que sea posible bajar con el auto hasta los depósitos fluviales para acceder el sitio. Si no es posible, se puede aparcar delante de las viviendas en la entrada del puente por la orilla izquirda y bajar andando.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
 
@@ -74,13 +74,13 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     Temperature (Atmospheric) (°C)                       |     18.0                                   |     18.0                         |     28.0                           |
 |     Temperature (Water / Agua) (°C)                      |     15.52                                  |     14.62                        |     19.66                          |
 |     Atmospheric pressure / presión (mbar)                |     820.6                                  |     813.2                        |     822.3                          |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                            |     11.89                        |     6.01                           |
+|     Dissolved oxygen / Oxigeno disuelto (mg/l)           |                                            |     11.89                        |     6.01                           |
 |     Dissolved oxygen / Oxigeno disuelto (%)              |                                            |     137.6                        |     76.78                          |
 |     pH                                                   |     8.33                                   |     8.57                         |     8.28                           |
 |     Conductivity / Conductividad (µS/cm)                 |     250                                    |     639                          |     601                            |
 |     Total Dissolved Solids (TDS / STD)  (ppm)            |     125                                    |     320                          |     300                            |
 |     ORP (mV)                                             |     233.8                                  |     85.8                         |     34.53                          |
 |     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero    |     Clear / Transparente         |     Chocolate / Chocolate          |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     91 (1.6N)                              |     183 (1.6N)                   |     159 (1.6N)                     |
+|     Alkalinity/Alkalinidad (Titración) (mg/l CaCO₃)      |     91 (1.6N)                              |     183 (1.6N)                   |     159 (1.6N)                     |
 |     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     74                                     |     154                          |     135                            |
 
