--- a/_docs/site-network/Q1_2S.md
+++ b/_docs/site-network/Q1_2S.md
@@ -1,10 +1,10 @@
 ---
-title: Q1.2 - Middle Opanccay - Catarata Sirenachayoc
-permalink: /docs/Q1_2/
+title: Q1.2S - Middle Opanccay - Catarata Sirenachayoc
+permalink: /docs/Q1_2S/
 ---
 
 
-### Site Q1.2: Middle Opanccay - Catarata Sirenachayoc
+### Site Q1.2S: Middle Opanccay - Catarata Sirenachayoc
 
 GPS: S12°906633, W74°250332. 
 Elevation: 2830m asl.
