--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -4,7 +4,7 @@ permalink: /docs/Q3_3/
 ---
 
 
-### Site Q3.3 March 2023 / Marzo 2023: Upper Huamanguilla-Iguian - Yanacocha
+### Site Q3.3U March 2023 / Marzo 2023: Upper Huamanguilla-Iguian - Yanacocha
 
 GPS: S12°958332, W74°129012. Elevation: 4060m asl.
 
@@ -15,7 +15,7 @@ Aerial view of study site / Vista aérea del lugar del estudio (March 2023) (Joh
 Close up aerial view of study site / Vista aérea mas cerca del lugar del estudio (March 2023) (John Forrest)
 
 
-### Site Q3.3A June 2023 / Junio 2023: Upper Huamanguilla-Iguian - above Cora Cora
+### Site Q3.3L June 2023 / Junio 2023: Upper Huamanguilla-Iguian - above Cora Cora
 
 GPS: S12°985667, W74°178212. Elevation: 3225m asl.
 
@@ -23,7 +23,7 @@ GPS: S12°985667, W74°178212. Elevation: 3225m asl.
 Aerial view of study site / Vista aérea del lugar del estudio (June 2023) (John Forrest)
 
 
-### Q3.3 site visit March 2023 / Visita a Q3.3 en marzo 2023
+### Q3.3U site visit March 2023 / Visita a Q3.3U en marzo 2023
 
 ![Q3.3site](/assets/sites/Q3.3site1.JPG)
 The study site / El lugar del estudio (March 2023) (John Forrest)
@@ -35,7 +35,7 @@ View downstream from the study site / Vista rio abajo desde el lugar del estudio
 View upstream from the study site / Visita rio arriba del lugar del estudio (March 2023) (John Forrest)
 
 
-### Q3.3A site visit June 2023 / Visita a Q3.3A en junio 2023
+### Q3.3L site visit June 2023 / Visita a Q3.3L en junio 2023
 
 ![Q3.3downstream](/assets/sites/Q3.3Adownstream.JPG)
 View upstream from the study site / Visita rio arriba del lugar del estudio (June 2023) (John Forrest)
@@ -91,13 +91,14 @@ Se accede al sitio atravesando hasta la zona superior de un campo en la orilla i
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q3.3                                 |       March / marzo 2023              |       June / junio 2023          |
+|       Site / Sitio: Q3.3                                 |   Q3.3U: March / marzo 2023           |  Q3.3L: June / junio 2023        |
 |----------------------------------------------------------|---------------------------------------|----------------------------------|
 |     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |
 |     Date / Fecha:                                        |     23.3.23                           |     23.6.23                      |
@@ -111,12 +112,12 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     Temperature (Atmospheric) (°C)                       |     9.9                               |     17.4                         |
 |     Temperature (Water / Agua) (°C)                      |     12.31                             |     8.12                         |
 |     Atmospheric pressure / presión (mbar)                |     674.7                             |     734.6                        |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.82                              |     7.01                         |
+|     Dissolved oxygen / Oxigeno disuelto (mg/l)           |     6.82                              |     7.01                         |
 |     Dissolved oxygen / Oxigeno disuelto (%)              |     107.5                             |     87.1                         |
 |     pH                                                   |     7.46                              |     7.44                         |
 |     Conductivity / Conductividad (µS/cm)                 |     38                                |     45                           |
 |     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                |     23                           |
 |     ORP (mV)                                             |     177.5                             |     167.8                        |
-|     Turbidity / Turbidez                                 |     Clear / Transparente          |     Clear / Transparente     |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     28 (1.6N)                         |     37 (1.6N)                    |
+|     Turbidity / Turbidez                                 |     Clear / Transparente              |     Clear / Transparente     |
+|     Alkalinity/Alkalinidad (Titración) (mg/l CaCO₃)      |     28 (1.6N)                         |     37 (1.6N)                    |
 |     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     25                                |     34                           |
