--- a/_docs/site-network/RC01.md
+++ b/_docs/site-network/RC01.md
@@ -32,6 +32,8 @@ RC01 is located in the final section of the river Cachi just above its confluenc
 
 The study site is located on extensive river deposits so its precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
 
+Between June and November 2023 gravel extraction operations began just upriver from the old bridge and  study site.
+
 It may be possible to drive down on to the river deposits to access the site. If this is not possible, then park in front of the housing at the bridge entrance on the left bank and walk down.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
@@ -43,6 +45,8 @@ RC01 se encuentra en el tramo final del río Cachi, justo rio arriba de su confl
 
 El sitio de muestreo está situado sobre extensos depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
 
+Entre junio y noviembre de 2023 comenzaron las operaciones de extracción de piedritas y arena justo río arriba del antiguo puente y del sitio de muestreo
+
 Puede que sea posible bajar con el auto hasta los depósitos fluviales para acceder el sitio. Si no es posible, se puede aparcar delante de las viviendas en la entrada del puente por la orilla izquirda y bajar andando.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
@@ -53,6 +57,7 @@ Puede que sea posible bajar con el auto hasta los depósitos fluviales para acce
 (Analytical comments with respect to the data will be posted once the site has been visited at least twice).
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
+
 
 ### River & Water Quality data / Datos fluviales y de calidad del agua
 
