--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -28,9 +28,9 @@ Site RC02 - View downstream. (March 2023) (John Forrest)
 
 ### Site description
 
-RC02 is located in the Cachi valley beneath the large Allcohuillca hill and upstream from its confluence with the river Huamanguilla-Iguian. The river emerges from a narrower section of the valley, with both the valley and the channel becoming wider at this point.
+RC02 is located in the Cachi valley beneath the large Allcohuillca hill, upstream from its confluence with the river Huamanguilla-Iguian but well below the point where water is extracted in a large canal to irrigate the lower Huanta area. The river emerges from a narrower section of the valley, with both the valley and the channel becoming wider at this point.
 
-The study site is situated on the right bank of the river Cachi beneath a footbridge over the river and just downstream from a large rock on which the bridge is supported. There is a single channel at this point.
+The study site is situated just upstream of a footbridge over the river. Measurements and samples are taken from both sides of the river just upstream on the right bank from a large rock on which the bridge is supported and just upstream from the bridge on the left bank. The river flows in a single channel at this point.
 
 The site is located on river deposits so its precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
 
@@ -41,9 +41,9 @@ It is possible to park on the road running down to the footbridge which is locat
 
 ### Descripción del sitio
 
-RC02 se ubica en el valle de Cachi bajo el gran cerro Allcohuillca y río arriba de su confluencia con el río Huamanguilla-Iguian. El río Cachi emerge de una sección más angosta del valle, y tanto el valle como el canal se vuelven más anchos en este punto.
+La RC02 se encuentra en el valle de Cachi, bajo el gran cerro Allcohuillca, aguas arriba de su confluencia con el río Huamanguilla-Iguian, pero muy por debajo del punto donde se extrae el agua en un gran canal para regar la zona baja de Huanta. El río Cachi emerge de una sección más angosta del valle, y tanto el valle como el canal se vuelven más anchos en este punto.
 
-El sitio de estudio está situado en la margen derecha del río Cachi, debajo de un puente peatonal sobre el río y justo río abajo de una gran roca sobre la que se apoya el puente. En este punto hay un único canal.
+El lugar de estudio está situado justo rio arriba de una puente peatonal sobre el río. Las mediciones y las muestras se toman a ambos lados del río, justo rio arriba, en la orilla derecha, de una gran roca sobre la que se apoya el puente, y justo rio arriba del puente, en la orilla izquierda. En este punto, el río fluye en un único cauce.
 
 El sitio está situado sobre depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del sitio.
 
@@ -58,34 +58,34 @@ Es posible aparcar en la carretera que baja hasta la pasarela, situada a unos 2 
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & Water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: RC02                                 |       March / marzo 2023                      |       June / junio 2023                   |
-|----------------------------------------------------------|-----------------------------------------------|-------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                   |     Austral Winter / Invierno             |
-|     Date / Fecha:                                        |     20.3.23                                   |     20.6.23                               |
-|     Time / Hora:                                         |     11.30                                     |     12.00                                 |
-|     Width / Ancho (m)                                    |     29.50                                     |     23.10                                 |
-|     Depth / Profundidad (Av.) (m)                        |     0.92                                      |     0.34                                  |
-|     CSA / Area traversal (Av.) (m²)                      |     27.25                                     |     7.85                                  |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     1.24                                      |     0.366                                 |
-|     Discharge / Caudal (Av.) (m³/s)                      |     33.845                                    |     2.906                                 |
-|     Riverbed sediment / Sedimentos                       |     Boulders & Cobbles / Rocas y Piedras      |     Sand & Pebbles / Arena y Piedritas    |
-|     Temperature (Atmospheric) (°C)                       |     27.2                                      |     22.0                                  |
-|     Temperature (Water / Agua) (°C)                      |     17.06                                     |     17.18                                 |
-|     Atmospheric pressure / presión (mbar)                |     804.2                                     |     804.2                                 |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.89                                      |     10.90                                 |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     100.4                                     |     138.4                                 |
-|     pH                                                   |     8.05                                      |     8.67                                  |
-|     Conductivity / Conductividad (µS/cm)                 |     158                                       |     551                                   |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     79                                        |     279                                   |
-|     ORP (mV)                                             |     230.5                                     |     169.3                                 |
-|     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero       |     Clear / Transparente                  |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     56 (1.6N)                                 |     292 (1.6N)                            |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     38                                        |     142                                   |
-
+|     Site / Sitio: RC02                                   |     March / marzo 2023                        |     June / junio 2023                     |     November / noviembre 2023                  |
+|----------------------------------------------------------|-----------------------------------------------|-------------------------------------------|------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                   |     Austral Winter / Invierno             |     Austral Winter / Invierno                  |
+|     Date / Fecha:                                        |     20.3.23                                   |     20.6.23                               |     23.11.23                                   |
+|     Time / Hora:                                         |     11.30                                     |     12.00                                 |     11.15                                      |
+|     Width / Ancho (m)                                    |     29.50                                     |     23.10                                 |     19.40                                      |
+|     Depth / Profundidad (Av.) (m)                        |     0.92                                      |     0.34                                  |     0.26                                       |
+|     CSA / Area traversal (Av.) (m²)                      |     27.25                                     |     7.85                                  |     5.122                                      |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     1.240                                     |     0.366                                 |     0.383                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     33.845                                    |     2.906                                 |     1.962                                      |
+|     Riverbed sediment / Sedimentos                       |     Boulders & Cobbles / Rocas y Guijarros    |     Sand & Pebbles / Arena y Piedritas    |     Cobbles & Pebbles / Piedras y Piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     27.2                                      |     22.0                                  |     29.7                                       |
+|     Temperature (Water / Agua) (°C)                      |     17.06                                     |     17.18                                 |     23.35                                      |
+|     Atmospheric pressure / presión (mbar)                |     804.2                                     |     804.2                                 |     809.3                                      |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.89                                      |     10.90                                 |     9.88                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     100.4                                     |     138.4                                 |     140.7                                      |
+|     pH                                                   |     8.05                                      |     8.67                                  |     9.24                                       |
+|     Conductivity / Conductividad (µS/cm)                 |     158                                       |     551                                   |     594                                        |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     79                                        |     279                                   |     297                                        |
+|     ORP (mV)                                             |     230.5                                     |     169.3                                 |     163.4                                      |
+|     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero       |     Clear / Transparente                  |     V.slightly turbid / un poco turbidez       |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     56 (1.6N)                                 |     292 (1.6N)                            |     178 (1.6N)                                 |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     38                                        |     142                                   |     164                                        |
 
