--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -55,33 +55,35 @@ El acceso se realiza por el lado izquierdo del valle a través y más allá de u
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q1.1                                   |        March / marzo 2023             |      June / junio 2023           |
-|----------------------------------------------------------|---------------------------------------|----------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |
-|     Date / Fecha:                                        |     15.3.23                           |     18.6.23                      |
-|     Time / Hora:                                         |     7.45                              |     8.45                         |
-|     Width / Ancho (m)                                    |     2.70                              |     3.10                         |
-|     Depth / Profundidad (Av.) (m)                        |     0.08                              |     0.16                         |
-|     CSA / Area traversal (Av.) (m²)                      |     0.22                              |     0.50                         |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.20                              |     0.451                        |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.044                             |     0.224                        |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     All sizes / Todos tamaños    |
-|     Temperature (Atmospheric) (°C)                       |     15.6                              |     11.5                         |
-|     Temperature (Water / Agua) (°C)                      |     16.60                             |     14.89                        |
-|     Atmospheric pressure / presión (mbar)                |     805.7                             |     807.0                        |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |     9.71                         |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |     117.3                        |
-|     pH                                                   |     8.38                              |     8.25                         |
-|     Conductivity / Conductividad (µS/cm)                 |     913                               |     597                          |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     456                               |     299                          |
-|     ORP (mV)                                             |     224.5                             |     112.0                        |
-|     Turbidity / Turbidez                                 |     Clear / Transparente              |     Clear / Transparente         |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     340 (1.6N)                        |     202 (1.6N)                   |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     308                               |     169                          |
+|     Site / Sitio: Q1.1                                   |     March / marzo 2023                |     June / junio 2023            |     November / noviembre 2023                  |
+|----------------------------------------------------------|---------------------------------------|----------------------------------|------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |     Austral Winter / Invierno                  |
+|     Date / Fecha:                                        |     15.3.23                           |     18.6.23                      |     19.11.23                                   |
+|     Time / Hora:                                         |     7.45                              |     8.45                         |     8.45                                       |
+|     Width / Ancho (m)                                    |     2.70                              |     3.10                         |     3.70                                       |
+|     Depth / Profundidad (Av.) (m)                        |     0.08                              |     0.16                         |     0.175                                      |
+|     CSA / Area traversal (Av.) (m²)                      |     0.22                              |     0.50                         |     0.648                                      |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     0.20                              |     0.451                        |     0.590                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.044                             |     0.224                        |     0.382                                      |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     All sizes / Todos tamaños    |     Cobbles & Pebbles / Piedras y Piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     15.6                              |     11.5                         |     26.1                                       |
+|     Temperature (Water / Agua) (°C)                      |     16.60                             |     14.89                        |     20.45                                      |
+|     Atmospheric pressure / presión (mbar)                |     805.7                             |     807.0                        |     806.3                                      |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |     9.71                         |     5.31                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |     117.3                        |     71.5                                       |
+|     pH                                                   |     8.38                              |     8.25                         |     8.34                                       |
+|     Conductivity / Conductividad (µS/cm)                 |     913                               |     597                          |     622                                        |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     456                               |     299                          |     311                                        |
+|     ORP (mV)                                             |     224.5                             |     112.0                        |     87.1                                       |
+|     Turbidity / Turbidez                                 |     Clear / Transparente              |     Clear / Transparente         |     Brown / Marron                             |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     340 (1.6N)                        |     202 (1.6N)                   |     150 (1.6N)                                 |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     308                               |     169                          |     129                                        |
+
 
