--- a/_docs/site-network/Q1_3.md
+++ b/_docs/site-network/Q1_3.md
@@ -6,7 +6,7 @@ permalink: /docs/Q1_3/
 
 ### Site Q1.3: Upper Opanccay - Yanaraccay
 
-GPS: S12°846634, W74°205759. 
+GPS: S12°846435, W74°205410. 
 Elevation: 3965m asl.
 
 
@@ -28,13 +28,14 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
-Q1.3 is located in a broad valley whose sides rapidly begin to rise rapidly so the flood-plain is narrow. 
+Q1.3 is located in a broad valley whose sides begin to rise rapidly so the flood-plain is narrow. 
 
 The study site is situated below a bofedal and an old dam, now in ruins, where an animal track crosses the river. Just above the bofedal, there is a small group of houses known as Yanaraccay.
 
-Access is from the Huanta to Uchuraccay road where a track turns off it and runs down parallel to the river to a scattered group of houses at the top of the valley.
+Access is from the Huanta to Uchuraccay road where a track turns off it and runs down parallel to the river towards Yanaraccay.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
+
 
 ### Descripción del sitio
 
@@ -53,33 +54,35 @@ El acceso se realiza desde la carretera Huanta-Uchuraccay, donde se desvía un c
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & wWater quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q1.3                                 |       March / marzo 2023           |       June / junio 2023            |
-|----------------------------------------------------------|------------------------------------|------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano        |     Austral Winter / Invierno      |
-|     Date / Fecha:                                        |     21.3.23                        |     24.6.23                        |
-|     Time / Hora:                                         |     9.30                           |     10.00                          |
-|     Width / Ancho (m)                                    |     5.74                           |     2.60                           |
-|     Depth / Profundidad (Av.) (m)                        |     0.19                           |     0.39                           |
-|     CSA / Area traversal (Av.) (m²)                      |     1.09                           |     1.01                           |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.88                           |     0.320                          |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.960                          |     0.324                          |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas    |     Mainly boulders / Mas rocas    |
-|     Temperature (Atmospheric) (°C)                       |     15.9                           |     17.0                           |
-|     Temperature (Water / Agua) (°C)                      |     11.18                          |     8.37                           |
-|     Atmospheric pressure / presión (mbar)                |     684.3                          |     685.8                          |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.29                           |     7.22                           |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     97.4                           |     103.3                          |
-|     pH                                                   |                        8.57        |     8.26                           |
-|     Conductivity / Conductividad (µS/cm)                 |     269                            |     386                            |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     134                            |     193                            |
-|     ORP (mV)                                             |     265.6                          |     118.8                          |
-|     Turbidity / Turbidez                                 |     Clear / Transparente           |     Clear / Transparente           |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     158 (1.6N)                     |     214 (1.6N)                     |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     150                            |     187                            |
+|     Site / Sitio: Q1.3                                   |     March / marzo 2023             |     June / junio 2023              |     November / noviembre 2023               |
+|----------------------------------------------------------|------------------------------------|------------------------------------|---------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano        |     Austral Winter / Invierno      |     Austral Winter / Invierno               |
+|     Date / Fecha:                                        |     21.3.23                        |     24.6.23                        |     20.11.23                                |
+|     Time / Hora:                                         |     9.30                           |     10.00                          |     10.00                                   |
+|     Width / Ancho (m)                                    |     5.74                           |     2.60                           |     4.30                                    |
+|     Depth / Profundidad (Av.) (m)                        |     0.19                           |     0.39                           |     0.08                                    |
+|     CSA / Area traversal (Av.) (m²)                      |     1.09                           |     1.01                           |     0.344                                   |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     0.88                           |     0.320                          |     0.314                                   |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.960                          |     0.324                          |     0.108                                   |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas    |     Mainly boulders / Mas rocas    |     Cobbles & Boulders / Piedras y Rocas    |
+|     Temperature (Atmospheric) (°C)                       |     15.9                           |     17.0                           |     15.3                                    |
+|     Temperature (Water / Agua) (°C)                      |     11.18                          |     8.37                           |     13.39                                   |
+|     Atmospheric pressure / presión (mbar)                |     684.3                          |     685.8                          |     683.1                                   |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.29                           |     7.22                           |     5.36                                    |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     97.4                           |     103.3                          |     87.0                                    |
+|     pH                                                   |     8.57                           |     8.26                           |     8.75                                    |
+|     Conductivity / Conductividad (µS/cm)                 |     269                            |     386                            |     372                                     |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     134                            |     193                            |     186                                     |
+|     ORP (mV)                                             |     265.6                          |     118.8                          |     184.4                                   |
+|     Turbidity / Turbidez                                 |     Clear / Transparente           |     Clear / Transparente           |     Clear / Transparente                    |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     158 (1.6N)                     |     214 (1.6N)                     |     187 (1.6)                               |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     150                            |     187                            |     171                                     |
+
 
